// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-notifications HOC withNotifications function should enhance props with notification and data 1`] = `
<div
  data_TOPIC={
    {
      "data": 1,
    }
  }
  prop1="val1"
  prop2="val2"
>
  Test component
</div>
`;

exports[`with-notifications HOC withNotifications function should enhance props with notification and no data 1`] = `
<div
  data_TOPIC={{}}
  prop1="val1"
  prop2="val2"
>
  Test component
</div>
`;

exports[`with-notifications HOC withNotifications function should enhance props without notification 1`] = `
<div
  prop1="val1"
>
  Test component
</div>
`;
